# self-mcp-scraper

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: bench.py  claude_desktop_config.json  cursor_config.json  standalone_probe.py
src/self_mcp_scraper/: __init__.py  config.py  fingerprint.py  proxy.py  rate_limit.py  server.py  tools.py
tests/: test_config.py  test_fingerprint.py  test_rate_limit.py  test_tools.py
